<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">


 <TextView
     android:id="@+id/tv_profile"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:fontFamily="@font/poppins_semibold"
     android:text="@string/profile"
     android:textColor="@color/black"
     android:textSize="24sp"
     app:layout_constraintBottom_toTopOf="@+id/image_view_account"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.467"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_account"
        android:layout_width="165dp"
        android:layout_height="148dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_baseline_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ian_rachman"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_account" />

    <TextView
        android:id="@+id/tv_username_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ian_rd"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <Button
        android:id="@+id/btn_request_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/poppins"
        android:text="@string/request_host"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_account" />

 <Button
     android:id="@+id/btn_edit_profile"
     style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
     android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="36dp"
     android:text="@string/edit_profile"
     android:textColor="@color/black"
     android:textSize="15sp"
     app:backgroundTint="@android:color/transparent"
     app:cornerRadius="8dp"
     app:icon="@drawable/ic_baseline_account_circle_24"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.491"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/btn_request_host"
     app:rippleColor="#33AAAAAA"
     app:strokeColor="@color/grey"
     app:strokeWidth="2dp" />

 <Button
     android:id="@+id/btn_verif"
     style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
     android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:text="@string/verif"
     android:textColor="@color/black"
     android:textSize="15sp"
     app:backgroundTint="@android:color/transparent"
     app:cornerRadius="8dp"
     app:icon="@drawable/ic_baseline_domain_verification_24"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.491"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile"
     app:rippleColor="#33AAAAAA"
     app:strokeColor="@color/grey"
     app:strokeWidth="2dp" />




</androidx.constraintlayout.widget.ConstraintLayout>