<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="376dp"
        android:layout_height="83dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="71dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="61dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/logo_stacked" />

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="59dp"
                android:layout_marginLeft="11dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stacked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/stacked"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date_stacked"
                        android:layout_width="59dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/tanggal_stacked"
                        android:textColor="@color/grey_reward"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/time_stacked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/waktu_stacked"
                        android:textColor="@color/grey_reward"
                        android:textSize="12dp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/total_history_stacked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75sp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/totall_stacked"
                android:textColor="@color/green_2"
                android:textSize="20dp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>