<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailVerifActivity">

    <LinearLayout
        android:id="@+id/lv_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_chevron_left_24" />

        <TextView
            android:id="@+id/txt_verif_meteran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/verif_meteran"
            android:textColor="@color/black_text"
            android:textSize="20sp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/img_meteran"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="36dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/meteran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_edit_profile"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edt_id_meteran"
        android:layout_width="339dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/id_met"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_masuk_id_meteran" />

    <TextView
        android:id="@+id/tv_masuk_id_meteran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="268dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/masuk_id_met"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_meteran" />

    <Spinner
        android:id="@+id/spDaya"
        android:layout_width="337dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/daya"
        android:background="@drawable/spinner_style"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pilih_daya" />

    <TextView
        android:id="@+id/tv_pilih_daya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="152dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/pilih_daya"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_id_meteran"
        app:layout_constraintVertical_bias="0.191" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simpan_detail_meteran"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_buttonlogin"
        android:fontFamily="@font/poppins"
        android:text="@string/simpan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spDaya"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>