<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="230dp"
    android:layout_height="178dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="83dp"

             app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@color/orange_transparent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_nama_room"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sampleroom"
            android:maxLines="1"
            android:textColor="@color/black_text"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_akses"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/txt_akses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_text_akses"
            android:fontFamily="@font/poppins"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/privates"
            android:textColor="@color/black_text"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_nama_room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_nama_room"
            app:layout_constraintTop_toTopOf="@+id/txt_nama_room" />

        <TextView
            android:id="@+id/txt_partisipan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_7_partisipan_terdaftar"
            android:textColor="@color/purple"
            android:textSize="9sp"
            app:layout_constraintStart_toStartOf="@+id/txt_nama_room"
            app:layout_constraintTop_toBottomOf="@+id/txt_nama_room" />

        <TextView
            android:id="@+id/txt_challenge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/lorem"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black_text"
            android:textSize="9sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_partisipan"
            app:layout_constraintTop_toBottomOf="@+id/txt_partisipan" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>