<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LockedStackingActivity">

    <LinearLayout
        android:id="@+id/lv_locked_stacking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_chevron_left_24" />

        <TextView
            android:id="@+id/txt_locked_stacking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/locked_stacking"
            android:textColor="@color/black_text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_total_token"
        android:layout_width="111dp"
        android:layout_height="66dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_locked_stacking">

        <TextView
            android:id="@+id/txt_your_total_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/yout_total_token"
            android:textColor="@color/orange"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_total_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/total_token"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_apy"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:layout_marginTop="42dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/lv_total_token"
        app:layout_constraintTop_toBottomOf="@+id/lv_locked_stacking">


        <ImageView
            android:layout_width="26dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_arrow_drop_up_24" />

        <TextView
            android:id="@+id/txt_your_apy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/apy_title"
            android:textColor="@color/green_2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_persen_apy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/persen_apy"
            android:textColor="@color/green_2"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="360dp"
        android:layout_height="280dp"
        android:background="@drawable/constcream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327">

        <LinearLayout
            android:id="@+id/lv_my_reward"
            android:layout_width="111dp"
            android:layout_height="66dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_my_reward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/my_reward"
                android:textColor="@color/grey_reward"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_total_reward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/my_stake_reward"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_my_stake"
            android:layout_width="111dp"
            android:layout_height="66dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/lv_my_reward"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_my_stake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/my_reward"
                android:textColor="@color/grey_reward"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_total_stake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/my_stake_reward"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_duration"
            android:layout_width="323dp"
            android:layout_height="79dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.729"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lv_my_reward">

            <TextView
                android:id="@+id/txt_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/duration"
                android:textColor="@color/grey_reward"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/lv_duration_days"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_30_days"
                    android:layout_width="94dp"
                    android:layout_height="39dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="5dp">

                    <TextView
                        android:id="@+id/txt_30_days"
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8sp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="30 Days"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_60_days"
                    android:layout_width="94dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="15dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="5dp">

                    <TextView
                        android:id="@+id/txt_60_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8sp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="60 Days"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_90_days"
                    android:layout_width="94dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="15dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="5dp">

                    <TextView
                        android:id="@+id/txt_90_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8sp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="90 Days"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_stake"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/bg_buttonlogin"
            android:fontFamily="@font/poppins"
            android:text="@string/stake_token"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lv_duration" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/baca_benefit"
            android:textColor="@color/purples"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_earn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/earn_history"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history_locked_stacked"
        android:layout_width="393dp"
        android:layout_height="88dp"
        android:layout_marginBottom="168dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_earn_history"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/history_locked_stacking">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>